[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Interface/Panels/tres/default_white_panel.tres" type="StyleBox" id=1]
[ext_resource path="res://Assets/Interface/Themes/FlatTheme.tres" type="Theme" id=2]
[ext_resource path="res://Nodes/Control/BlurRect/BlurRect.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Shaders/Blur/blur.gdshader" type="Shader" id=4]
[ext_resource path="res://Nodes/Control/Modal/modal.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.164706, 0.164706, 0.180392, 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/blur_amount = 1.5

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Overlay" type="PanelContainer"]
self_modulate = Color( 1, 1, 1, 0.196078 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2
rect = Rect2( 0, 0, 240, 360 )

[node name="BlurRect" parent="." instance=ExtResource( 3 )]
material = SubResource( 2 )
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 240.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TapArea" type="Button" parent="."]
margin_right = 240.0
margin_bottom = 360.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 3 )

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 240.0
margin_bottom = 360.0
mouse_filter = 2
theme = ExtResource( 2 )
custom_constants/margin_right = 30
custom_constants/margin_top = 50
custom_constants/margin_left = 30
custom_constants/margin_bottom = 50

[node name="Panel" type="PanelContainer" parent="Margin"]
margin_left = 104.0
margin_top = 163.0
margin_right = 136.0
margin_bottom = 197.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = ExtResource( 1 )

[node name="Margin" type="MarginContainer" parent="Margin/Panel"]
margin_left = 6.0
margin_top = 6.0
margin_right = 26.0
margin_bottom = 26.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[connection signal="pressed" from="TapArea" to="." method="_on_TapArea_pressed"]
